--- a/emails/confirm-signup.html
+++ b/emails/confirm-signup.html
@@ -8,98 +8,57 @@
         body {
             margin: 0;
             padding: 0;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Ubuntu, sans-serif;
-            background-color: #f6f9fc;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            background-color: #f9fafb;
             color: #374151;
         }
         .container {
-            max-width: 600px;
-            margin: 0 auto;
+            max-width: 500px;
+            margin: 40px auto;
             background-color: #ffffff;
-            margin-bottom: 64px;
+            border-radius: 8px;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
         }
         .header {
-            padding: 32px 24px;
+            padding: 24px;
             text-align: center;
-            border-bottom: 1px solid #e6e6e6;
         }
         .logo {
-            width: 120px;
-            height: 40px;
+            width: 100px;
+            height: auto;
         }
         .content {
-            padding: 32px 24px;
+            padding: 0 24px 24px;
         }
         .heading {
-            color: #1f2937;
-            font-size: 24px;
-            font-weight: bold;
-            margin: 0 0 24px;
+            color: #111827;
+            font-size: 20px;
+            font-weight: 600;
+            margin: 0 0 16px;
         }
         .text {
             color: #374151;
-            font-size: 16px;
-            line-height: 24px;
-            margin: 16px 0;
+            font-size: 14px;
+            line-height: 20px;
+            margin: 12px 0;
         }
         .button {
             display: inline-block;
             background-color: #22c55e;
             color: #ffffff;
             text-decoration: none;
-            padding: 12px 24px;
-            border-radius: 8px;
-            font-weight: bold;
-            margin: 24px 0;
-        }
-        .list-item {
-            color: #374151;
-            font-size: 16px;
-            line-height: 24px;
-            margin: 8px 0;
-            padding-left: 16px;
-        }
-        .signature {
-            color: #6b7280;
-            font-size: 16px;
-            line-height: 24px;
-            margin: 32px 0 0;
-            font-style: italic;
-        }
-        .token-info {
-            background-color: #f3f4f6;
-            border: 1px solid #d1d5db;
-            border-radius: 8px;
-            color: #374151;
+            padding: 10px 20px;
+            border-radius: 6px;
+            font-weight: 500;
+            margin: 16px 0;
             font-size: 14px;
-            line-height: 20px;
-            margin: 16px 0;
-            padding: 12px;
-        }
-        .welcome-message {
-            background-color: #f0fdf4;
-            border: 1px solid #22c55e;
-            border-radius: 8px;
-            color: #15803d;
-            font-size: 16px;
-            line-height: 24px;
-            margin: 16px 0;
-            padding: 16px;
         }
         .footer {
-            padding: 24px;
+            padding: 16px 24px;
             text-align: center;
-            border-top: 1px solid #e6e6e6;
-        }
-        .footer-text {
-            color: #8898aa;
+            border-top: 1px solid #f3f4f6;
+            color: #9ca3af;
             font-size: 12px;
-            line-height: 16px;
-            margin: 8px 0;
-        }
-        .footer-link {
-            color: #22c55e;
-            text-decoration: none;
         }
     </style>
 </head>
@@ -107,7 +66,7 @@
     <div class="container">
         <!-- Header -->
         <div class="header">
-            <img src="https://github.com/AfroTechBoss/images/blob/main/logo%20(1).svg" alt="Honua" class="logo">
+            <img src="https://raw.githubusercontent.com/AfroTechBoss/images/main/logo%20(1).svg" alt="Honua" class="logo">
         </div>
 
         <!-- Main Content -->
@@ -116,46 +75,21 @@
 
             <p class="text">Hi {{ .Email }},</p>
 
-            <p class="text">Thank you for creating your Honua account. We're glad to have you join us.</p>
-
-            <div class="welcome-message">{{ .Data }}</div>
-
-            <p class="text">Please confirm your email address to activate your account:</p>
+            <p class="text">Thank you for joining Honua. Please confirm your email address to get started:</p>
 
             <a href="{{ .ConfirmationURL }}" class="button">Confirm Email Address</a>
 
-            <div class="token-info">
-                <strong>Confirmation Token:</strong> {{ .Token }}<br>
-                <strong>Token Hash:</strong> {{ .TokenHash }}
-            </div>
+            <p class="text">🎉 <strong>Join our Beta Testing Community!</strong><br>
+            Share your feedback, ideas, and connect with other early users on our Discord server. Your input helps shape Honua's future!</p>
+            
+            <a href="https://discord.gg/ZBHuHEX3cE" class="button" style="background-color: #5865f2;">Join Discord Community</a>
 
-            <p class="text">Once confirmed, you'll be able to:</p>
-
-            <p class="list-item">• Share your sustainability journey</p>
-            <p class="list-item">• Connect with like-minded individuals</p>
-            <p class="list-item">• Complete eco-friendly tasks and earn impact points</p>
-            <p class="list-item">• Join community discussions and forums</p>
-
-            <p class="text">If you didn't sign up for Honua, you can ignore this email.</p>
-
-            {{ if .RedirectTo }}
-            <p class="text">After confirming your email, you'll be redirected to: {{ .RedirectTo }}</p>
-            {{ end }}
-
-            <p class="signature">
-                Welcome to the movement!<br>
-                The Honua Team
-            </p>
+            <p class="text">If you didn't create this account, you can safely ignore this email.</p>
         </div>
 
         <!-- Footer -->
         <div class="footer">
-            <p class="footer-text">© 2024 Honua. Building a sustainable future together.</p>
-            <p class="footer-text">
-                <a href="{{ .SiteURL }}/unsubscribe" class="footer-link">Unsubscribe</a>
-                • <a href="{{ .SiteURL }}/privacy" class="footer-link">Privacy Policy</a>
-                • <a href="{{ .SiteURL }}/terms" class="footer-link">Terms of Service</a>
-            </p>
+            © 2025 Honua
         </div>
     </div>
 </body>
