--- a/emails/invite-user.html
+++ b/emails/invite-user.html
@@ -8,91 +8,57 @@
         body {
             margin: 0;
             padding: 0;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Ubuntu, sans-serif;
-            background-color: #f6f9fc;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            background-color: #f9fafb;
             color: #374151;
         }
         .container {
-            max-width: 600px;
-            margin: 0 auto;
+            max-width: 500px;
+            margin: 40px auto;
             background-color: #ffffff;
-            margin-bottom: 64px;
+            border-radius: 8px;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
         }
         .header {
-            padding: 32px 24px;
+            padding: 24px;
             text-align: center;
-            border-bottom: 1px solid #e6e6e6;
         }
         .logo {
-            width: 120px;
-            height: 40px;
+            width: 100px;
+            height: auto;
         }
         .content {
-            padding: 32px 24px;
+            padding: 0 24px 24px;
         }
         .heading {
-            color: #1f2937;
-            font-size: 24px;
-            font-weight: bold;
-            margin: 0 0 24px;
+            color: #111827;
+            font-size: 20px;
+            font-weight: 600;
+            margin: 0 0 16px;
         }
         .text {
             color: #374151;
-            font-size: 16px;
-            line-height: 24px;
-            margin: 16px 0;
+            font-size: 14px;
+            line-height: 20px;
+            margin: 12px 0;
         }
         .button {
             display: inline-block;
             background-color: #22c55e;
             color: #ffffff;
             text-decoration: none;
-            padding: 12px 24px;
-            border-radius: 8px;
-            font-weight: bold;
-            margin: 24px 0;
-        }
-        .message-box {
-            background-color: #f0fdf4;
-            border: 1px solid #22c55e;
-            border-radius: 8px;
-            color: #15803d;
-            font-size: 16px;
-            font-style: italic;
-            line-height: 24px;
-            margin: 24px 0;
-            padding: 16px;
-        }
-        .list-item {
-            color: #374151;
-            font-size: 16px;
-            line-height: 24px;
-            margin: 8px 0;
-        }
-        .token-info {
-            background-color: #f3f4f6;
-            border: 1px solid #d1d5db;
-            border-radius: 8px;
-            color: #374151;
-            font-size: 14px;
-            line-height: 20px;
+            padding: 10px 20px;
+            border-radius: 6px;
+            font-weight: 500;
             margin: 16px 0;
-            padding: 12px;
+            font-size: 14px;
         }
         .footer {
-            padding: 24px;
+            padding: 16px 24px;
             text-align: center;
-            border-top: 1px solid #e6e6e6;
-        }
-        .footer-text {
-            color: #8898aa;
+            border-top: 1px solid #f3f4f6;
+            color: #9ca3af;
             font-size: 12px;
-            line-height: 16px;
-            margin: 8px 0;
-        }
-        .footer-link {
-            color: #22c55e;
-            text-decoration: none;
         }
     </style>
 </head>
@@ -100,50 +66,30 @@
     <div class="container">
         <!-- Header -->
         <div class="header">
-            <img src="https://github.com/AfroTechBoss/images/blob/main/logo%20(1).svg" alt="Honua" class="logo">
+            <img src="https://raw.githubusercontent.com/AfroTechBoss/images/main/logo%20(1).svg" alt="Honua" class="logo">
         </div>
 
         <!-- Main Content -->
         <div class="content">
-            <h1 class="heading">Join Honua Community</h1>
+            <h1 class="heading">You're Invited to Join Honua</h1>
 
             <p class="text">Hi {{ .Email }},</p>
 
             <p class="text">You've been invited to join Honua, a sustainability-focused community platform.</p>
 
-            <div class="message-box">{{ .Data }}</div>
-
-            <p class="text">Honua is where sustainability enthusiasts connect, share their eco-friendly journeys, and work together to make a positive environmental impact.</p>
-
             <a href="{{ .ConfirmationURL }}" class="button">Accept Invitation</a>
 
-            <div class="token-info">
-                <strong>Invitation Token:</strong> {{ .Token }}<br>
-                <strong>Token Hash:</strong> {{ .TokenHash }}
-            </div>
+            <p class="text">🎉 <strong>Join our Beta Testing Community!</strong><br>
+            Share your feedback, ideas, and connect with other early users on our Discord server. Your input helps shape Honua's future!</p>
+            
+            <a href="https://discord.gg/ZBHuHEX3cE" class="button" style="background-color: #5865f2;">Join Discord Community</a>
 
-            <p class="text">Join thousands of users who are already:</p>
-
-            <p class="list-item">🌱 Sharing sustainable living tips</p>
-            <p class="list-item">🏆 Completing environmental challenges</p>
-            <p class="list-item">💬 Discussing climate solutions</p>
-            <p class="list-item">📊 Tracking their environmental impact</p>
-
-            <p class="text">Ready to get started? Click the button above to join us!</p>
-
-            {{ if .RedirectTo }}
-            <p class="text">After accepting your invitation, you'll be redirected to: {{ .RedirectTo }}</p>
-            {{ end }}
+            <p class="text">If you don't want to join, you can safely ignore this email.</p>
         </div>
 
         <!-- Footer -->
         <div class="footer">
-            <p class="footer-text">© 2024 Honua. Building a sustainable future together.</p>
-            <p class="footer-text">
-                <a href="{{ .SiteURL }}/unsubscribe" class="footer-link">Unsubscribe</a>
-                • <a href="{{ .SiteURL }}/privacy" class="footer-link">Privacy Policy</a>
-                • <a href="{{ .SiteURL }}/terms" class="footer-link">Terms of Service</a>
-            </p>
+            © 2024 Honua
         </div>
     </div>
 </body>
